fix(alert): alert mobile layout regarding action buttons
Updated the layout so buttons can break to a newline on smaller screens and don't squish the content too much but are still center aligned if there is little content.

--- a/packages/web-styles/src/components/alert.scss
+++ b/packages/web-styles/src/components/alert.scss
@@ -132,14 +132,13 @@
   justify-content: space-between;
   gap: spacing.$size-regular;
 
-  @include media-breakpoint-down(md) {
+  @include media-breakpoint-down(lg) {
     flex-direction: column;
     align-items: flex-start;
-    justify-content: stretch;
+    justify-content: flex-end;
 
-    .alert-content {
-      flex-basis: auto;
-      align-self: stretch;
+    .alert-buttons {
+      align-self: flex-end;
     }
   }
 
@@ -157,7 +156,7 @@
 
   .alert-content {
     display: flex;
-    flex: 1 1 0;
+    flex: 2 1 auto;
     flex-flow: column nowrap;
 
     > *:last-child {
@@ -167,11 +166,13 @@
 
   .alert-buttons {
     display: flex;
-    flex-wrap: wrap;
     gap: spacing.$size-regular;
-    align-self: flex-end;
+    justify-self: flex-end;
+    flex: 1 1 auto;
+    flex-direction: row-reverse;
 
     @include media-breakpoint-down(rg) {
+      flex-direction: column;
       align-self: stretch;
 
       .btn {
